0.19.0

New features:

 * Support for downloading album with JDownloader rather than as a zip file
 * Equality and contains (+regex) operators for filename formatting
 * User-specified variables for filename formatting
 * Special variables `prefix` and `suffix` (user-set) are now automatically prefixed/suffixed to the filename

Improvements:

 * Various improvements/fixes to existing rules (including Facebook, Flickr, Instagram)
 * Downloading a gallery through a zip file will now default to storing under a top-level directory

Bugfixes:

 * Large albums (~5000+ items) will no longer crash gallery downloading
 * Fix dots in filenames cutting off the rest of the filename (#718, thanks to AdClear247 for reporting)
 * Albums using `album_info` will no longer load all images
 * Fix crashing when loading blobs on different context IDs under Firefox

Special thanks to fedesk, AdClear247, elvisef, ayunami2000, dungeon_addiction, remlap, Owyn, LeGiTiM, llacb47 for their contributions and reports for this release

---

0.18.3

New features:

 * Support for ~15 new websites (using ~15 new rules)

Improvements:

 * Various improvements/fixes to existing rules (including Amazon)

Bugfixes:

 * Fix trigger failing to work due to trigger behavior being modified (thanks to anonamouse on discord for reporting)

Special thanks to fireattack, anonamouse, remlap, Brendan Castaneda, Zui for their contributions and reports for this release

---

0.18.2

New features:

 * Russian translation (thanks to vanja-san)
 * Option to control popup origin when overflowing (set to middle by default)
 * Option to center the popup on overflow (disabled by default)
 * Option to use last zoom (#701, set to albums by default, thanks to Michael82548 for the idea)
 * Option for userscript to use web archive to load libraries (disabled by default)
 * Option for userscript to toggle integrity checks for libraries (enabled by default)
 * Support for ~25 new websites (using ~15 new rules)

Improvements:
