@@ -29,33 +29,33 @@
 // @name:zh-CN        Image Max URL
 // @name:zh-TW        Image Max URL
 // @name:zh-HK        Image Max URL
-// @description       Finds larger or original versions of images and videos for 7900+ websites, including a powerful media popup and download feature
-// @description:ar    البحث عن نسخ أكبر أو أصلية من الصور لأكثر من 7900 موقع ويب
-// @description:cs    Vyhledá větší nebo původní verze obrázků a videí pro více než 7900 webů
-// @description:da    Finder større eller originale versioner af billeder og videoer til mere end 7900 websteder
-// @description:de    Sucht nach größeren oder originalen Versionen von Bildern und Videos für mehr als 7900 Websites
-// @description:el    Βρίσκει μεγαλύτερες ή πρωτότυπες εκδόσεις εικόνων και βίντεο για περισσότερους από 7900 ιστότοπους
-// @description:eo    Trovas pli grandajn aŭ originalajn versiojn de bildoj kaj filmetoj por pli ol 7900 retejoj
-// @description:es    Encuentra imágenes más grandes y originales para más de 7900 sitios
-// @description:fi    Etsii suurempia tai alkuperäisiä versioita kuvista ja videoista yli 7900 verkkosivustolle
-// @description:fr    Trouve des versions plus grandes ou originales d'images et de vidéos pour plus de 7 900 sites web, y compris une puissante fonction de popup média
-// @description:fr-CA Trouve des versions plus grandes ou originales d'images et de vidéos pour plus de 7 900 sites web, y compris une puissante fonction de popup média
-// @description:he    מוצא גרסאות גדולות יותר או מקוריות של תמונות וסרטונים עבור יותר מ-7900 אתרים
-// @description:hi    7900 से अधिक वेबसाइटों के लिए फ़ोटो और वीडियो के बड़े या मूल संस्करण ढूँढता है
-// @description:hu    Több mint 7900 webhely képének és videóinak nagyobb vagy eredeti változatát találja
-// @description:id    Menemukan versi gambar dan video yang lebih besar atau orisinal untuk lebih dari 7900 situs web
-// @description:it    Trova versioni più grandi o originali di immagini e video per oltre 7900 siti web
-// @description:ja    7900以上のウェブサイトで高画質や原本画像を見つけ出します
-// @description:ko    7900개 이상의 사이트에 대해 고화질이나 원본 이미지를 찾아드립니다
-// @description:nb    Finner større eller originale versjoner av bilder og videoer for mer enn 7900 nettsteder
-// @description:nl    Vindt grotere of originele versies van foto's en video's voor meer dan 7900 websites
-// @description:ru    Находит увеличенные или оригинальные версии изображений для более чем 7900 веб-сайтов
-// @description:bg    Намира увеличени или оригинални версии на изображения за повече от 7900 уеб сайтове
-// @description:uk    Знаходить збільшені або оригінальні версії зображень для більш ніж 7900 веб-сайтів
-// @description:zh    为7900多个网站查找更大或原始图像
-// @description:zh-CN 为7900多个网站查找更大或原始图像
-// @description:zh-TW 為7900多個網站查找更大或原始圖像
-// @description:zh-HK 為7900多個網站查找更大或原始圖像
+// @description       Finds larger or original versions of images and videos for 7800+ websites, including a powerful media popup and download feature
+// @description:ar    البحث عن نسخ أكبر أو أصلية من الصور لأكثر من 7800 موقع ويب
+// @description:cs    Vyhledá větší nebo původní verze obrázků a videí pro více než 7800 webů
+// @description:da    Finder større eller originale versioner af billeder og videoer til mere end 7800 websteder
+// @description:de    Sucht nach größeren oder originalen Versionen von Bildern und Videos für mehr als 7800 Websites
+// @description:el    Βρίσκει μεγαλύτερες ή πρωτότυπες εκδόσεις εικόνων και βίντεο για περισσότερους από 7800 ιστότοπους
+// @description:eo    Trovas pli grandajn aŭ originalajn versiojn de bildoj kaj filmetoj por pli ol 7800 retejoj
+// @description:es    Encuentra imágenes más grandes y originales para más de 7800 sitios
+// @description:fi    Etsii suurempia tai alkuperäisiä versioita kuvista ja videoista yli 7800 verkkosivustolle
+// @description:fr    Trouve des versions plus grandes ou originales d'images et de vidéos pour plus de 7 800 sites web, y compris une puissante fonction de popup média
+// @description:fr-CA Trouve des versions plus grandes ou originales d'images et de vidéos pour plus de 7 800 sites web, y compris une puissante fonction de popup média
+// @description:he    מוצא גרסאות גדולות יותר או מקוריות של תמונות וסרטונים עבור יותר מ-7800 אתרים
+// @description:hi    7800 से अधिक वेबसाइटों के लिए फ़ोटो और वीडियो के बड़े या मूल संस्करण ढूँढता है
+// @description:hu    Több mint 7800 webhely képének és videóinak nagyobb vagy eredeti változatát találja
+// @description:id    Menemukan versi gambar dan video yang lebih besar atau orisinal untuk lebih dari 7800 situs web
+// @description:it    Trova versioni più grandi o originali di immagini e video per oltre 7800 siti web
+// @description:ja    7800以上のウェブサイトで高画質や原本画像を見つけ出します
+// @description:ko    7800개 이상의 사이트에 대해 고화질이나 원본 이미지를 찾아드립니다
+// @description:nb    Finner større eller originale versjoner av bilder og videoer for mer enn 7800 nettsteder
+// @description:nl    Vindt grotere of originele versies van foto's en video's voor meer dan 7800 websites
+// @description:ru    Находит увеличенные или оригинальные версии изображений для более чем 7800 веб-сайтов
+// @description:bg    Намира увеличени или оригинални версии на изображения за повече от 7800 уеб сайтове
+// @description:uk    Знаходить збільшені або оригінальні версії зображень для більш ніж 7800 веб-сайтів
+// @description:zh    为7800多个网站查找更大或原始图像
+// @description:zh-CN 为7800多个网站查找更大或原始图像
+// @description:zh-TW 為7800多個網站查找更大或原始圖像
+// @description:zh-HK 為7800多個網站查找更大或原始圖像
 // @namespace         http://tampermonkey.net/
 // @version           0.19.0
 // @author            qsniyg
